--- a/ui/src/components/Data/Data.css
+++ b/ui/src/components/Data/Data.css
@@ -1,5 +1,5 @@
 .dark {
-  color: #666;
+  color: black;
 }
 .light {
   color: white;
@@ -11,5 +11,5 @@ td {
   text-align: center;
   padding: 0.5px;
   font-size: 30px;
-  background-color: blue;
+  background-color: rgb(48, 42, 42);
 }
