--- a/ui/src/components/Data/Data.css
+++ b/ui/src/components/Data/Data.css
@@ -12,4 +12,5 @@ td {
   padding: 0.5px;
   font-size: 30px;
   background-color: rgb(48, 42, 42);
+  font-family: "Allerta Stencil", sans-serif;
 }
